--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   cloud_firestore: ^0.14.0+2
   firebase_auth: ^0.18.0+1
   firebase_core: ^0.5.0
-  flutter_flexible_toast: ^0.1.4
+  toast: ^0.1.5
 
 dev_dependencies:
   flutter_test:
