--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,11 @@ dependencies:
   firebase_auth: ^0.18.0+1
   firebase_core: ^0.5.0
   toast: ^0.1.5
+  uuid: ^2.2.0
+  firebase_storage: ^4.0.0
+  image_picker: ^0.6.7+7
+  image_cropper: ^1.3.0
+  path_provider: ^1.6.14
 
 dev_dependencies:
   flutter_test:
