--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   image_picker: ^0.6.7+7
   image_cropper: ^1.3.0
   path_provider: ^1.6.14
+  network_to_file_image: ^2.3.2
+  flutter_image_compress: ^0.7.0
 
 dev_dependencies:
   flutter_test:
