--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   shimmer: ^1.1.1
   bloc: ^6.0.3
   flutter_bloc: ^6.0.4
+  provider: ^4.3.2+1
 
 dev_dependencies:
   flutter_test:
